# agent-tripwire

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  seed-feed.yml
Formula/: tripwire.rb
apps/menubar-macos/: .gitignore  Package.swift  README.md
apps/menubar-macos/Resources/: Info.plist
apps/menubar-macos/Sources/TripwireMenubar/: AppDelegate.swift  DaemonClient.swift  MenuBuilder.swift  NotifyMode.swift  StoreReader.swift  Summary.swift  main.swift
apps/menubar-macos/scripts/: build.sh
helpers/tripwire-watcher/: Cargo.toml  README.md
helpers/tripwire-watcher/.cargo/: config.toml
helpers/tripwire-watcher/src/: config.rs  event.rs  linux.rs  main.rs  pid.rs  watcher.rs
infrastructure/: README.md  deploy.sh  template.yaml
schemas/: event.schema.json  rule.schema.json
scripts/: build-site.mjs  daemon-demo.mjs  dashboard-demo.mjs  publish-feed.mjs
spec/: CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  agent-tripwire-spec.md
spec/docs/: community-feed.md  feed.md  rules.md
