[package]
name = "tripwire-watcher"
version = "0.1.0"
edition = "2021"
description = "Native filesystem watcher for tripwired (JSONL over stdout)"
license = "Apache-2.0 OR MIT"
publish = false

[[bin]]
name = "tripwire-watcher"
path = "src/main.rs"

[dependencies]
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
glob = "0.3"
thiserror = "2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
